Sat Aug 19 22:05:46 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* server.c (do_cvs_command): Clear error_use_protocol in the
	child.
	(server): Set error_use_protocol.

Sun Aug 13 15:33:37 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (do_cvs_command): Don't select on exceptions.

Fri Aug  4 00:13:47 1995  Jim Meyering  (meyering@comco.com)

	* Makefile.in (LDFLAGS): Set to @LDFLAGS@.
	(options.h): Depend on ../config.status and options.h.in.
	Add rule to build it from dependents.

	* add.c: Include save-cwd.h.
	(add_directory): Use save_cwd and restore_cwd instead of
	explicit getwd then chdir.
	* import.c (import_descend_dir): Likewise.
	* modules.c (do_module): Likewise.

	* recurse.c (save_cwd, restore_cwd, free_cwd): Remove functions.
	New versions have been broken out into save-cwd.c.
	(do_dir_proc): Adapt to handle status code returned by new versions
	of save_cwd and restore_cwd -- and one fewer argument to restore_cwd.
	(unroll_files_proc): Likewise.

	* wrapper.c (wrap_name_has): Add default: abort () to switch
	statement to avoid warning from gcc -Wall.
	(wrap_matching_entry): Remove dcl of unused TEMP.
	(wrap_tocvs_process_file): Remove dcl of unused ERR.
	(wrap_fromcvs_process_file): Likewise.

	* cvs.h: Remove prototype for error.  Instead, include error.h.
	Also, remove trailing white space.

Thu Aug  3 10:12:20 1995  Jim Meyering  (meyering@comco.com)

	* import.c (import_descend_dir): Don't print probably-bogus CWD
	in error messages saying `cannot get working directory'.

Sun Jul 30 20:52:04 1995  James Kingdon  <kingdon@harvey.cyclic.com>

	* parseinfo.c (Parse_Info): Revise comments and indentation.

Sun Jul 28 15:30:16 1995  Vince DeMarco  <vdemarco@bou.shl.com>

        * history.c: put ifdef SERVER_SUPPORT around tracing code incase
        the client/server code is not compiled into the program.

Sat Jul 29 16:59:49 1995  James Kingdon  <kingdon@harvey.cyclic.com>
