@@ -1,3 +1,10 @@
+Sun Aug 20 00:59:46 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* options.h.in: Document usage of DIFF in update.c
+	* update.c: Use DIFF -c, not DIFF -u.  The small improvement in
+	diff size is not worth the hassle in terms of everyone having to
+	make sure that DIFF is GNU diff (IMHO).
+
 Sat Aug 19 22:05:46 1995  Jim Blandy  <jimb@totoro.cyclic.com>
 
 	* server.c (do_cvs_command): Clear error_use_protocol in the
